collapse dinges fixen

--- a/Hybride/css/stijl.css
+++ b/Hybride/css/stijl.css
@@ -195,3 +195,16 @@ footer {
 #MainVriendenlijst {
     text-align: center;
 }
+
+panelDiv{
+    height: 100%;
+    width: 100%;
+}
+
+.panel-body{
+    padding: 22px 15px;
+}
+
+.panel-footer{
+    padding: 22px 15px;
+}
